--- a/demo4Refresh/src/main/res/layout/activity_detail_refreshable_image.xml
+++ b/demo4Refresh/src/main/res/layout/activity_detail_refreshable_image.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2015 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,101 +14,97 @@
   ~ limitations under the License.
 -->
 
-<com.lsjwzh.widget.PullToRefreshContainer
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  android:id="@+id/main_content"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  android:fitsSystemWindows="true"
-  android:overScrollMode="never">
-
-  <FrameLayout
+<com.lsjwzh.widget.PullToRefreshContainer xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:overScrollMode="never">
 
-    <com.support.android.designlibdemo.AppRefreshLoadingView
-      android:id="@id/ptr_refreshLoadingView"
-      android:background="#000000"
-      android:layout_width="match_parent"
-      android:layout_height="100dp">
-    </com.support.android.designlibdemo.AppRefreshLoadingView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.support.android.designlibdemo.AppRefreshLoadingView
+            android:id="@id/ptr_refreshLoadingView"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="#000000"></com.support.android.designlibdemo.AppRefreshLoadingView>
+
+        <LinearLayout
+            android:id="@id/ptr_refreshTargetView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/imageWrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@id/ptr_refreshLoadingView"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_dashboard" />
+
+                <ImageView
+                    android:id="@+id/backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:fitsSystemWindows="true"
+                    android:scaleType="centerCrop" />
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:id="@+id/stickyLayout"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <com.lsjwzh.widget.powerfulscrollview.AutoMeasureRecyclerView
+                android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/cardview_dark_background"
+                android:clipToPadding="false" />
+
+            <TextView
+                android:id="@+id/loadingMore"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:text="loading more"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+    </FrameLayout>
 
     <LinearLayout
-      android:id="@id/ptr_refreshTargetView"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:orientation="vertical">
-
-      <RelativeLayout
-        android:id="@+id/imageWrapper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-          android:id="@id/ptr_refreshLoadingView"
-          android:layout_width="match_parent"
-          android:layout_height="100dp"
-          android:fitsSystemWindows="true"
-          android:scaleType="centerCrop"
-          android:src="@drawable/ic_dashboard"/>
-
-        <ImageView
-          android:id="@+id/backdrop"
-          android:layout_width="match_parent"
-          android:layout_height="200dp"
-          android:fitsSystemWindows="true"
-          android:scaleType="centerCrop"/>
-
-      </RelativeLayout>
-
-      <LinearLayout
-        android:id="@+id/stickyLayout"
+        android:id="@+id/stickyLayout2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:visibility="gone">
+        android:visibility="gone"
+        app:actionType="sticky"
+        app:stickyCopyView="@+id/stickyLayout">
 
         <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="@string/app_name"
-          android:textSize="20sp"/>
-      </LinearLayout>
-
-      <com.lsjwzh.widget.powerfulscrollview.AutoExtendRecyclerView
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/cardview_dark_background"
-        android:clipToPadding="false"
-        android:paddingBottom="20dp"/>
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="20sp" />
     </LinearLayout>
-
-  </FrameLayout>
-
-  <LinearLayout
-    android:id="@+id/stickyLayout2"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:visibility="gone"
-    app:actionType="sticky"
-    app:stickyCopyView="@+id/stickyLayout">
-
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:text="@string/app_name"
-      android:textSize="20sp"/>
-  </LinearLayout>
-
-  <TextView
-    android:id="@+id/loadingMore"
-    android:layout_width="match_parent"
-    android:layout_height="20dp"
-    android:layout_gravity="bottom"
-    android:text="loading more"
-    android:textSize="20sp"
-    app:actionType="sticky"/>
 
 </com.lsjwzh.widget.PullToRefreshContainer>
