--- a/demo4Refresh/src/main/res/layout/activity_detail_refreshable_image.xml
+++ b/demo4Refresh/src/main/res/layout/activity_detail_refreshable_image.xml
@@ -32,10 +32,11 @@
             android:layout_height="100dp"
             android:background="#000000"></com.support.android.designlibdemo.AppRefreshLoadingView>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@id/ptr_refreshTargetView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:clipChildren="false"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -44,7 +45,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@id/ptr_refreshLoadingView"
+                    android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:fitsSystemWindows="true"
@@ -75,20 +76,23 @@
 
             <com.lsjwzh.widget.powerfulscrollview.AutoMeasureRecyclerView
                 android:id="@+id/recyclerview"
+                android:layout_below="@+id/imageWrapper"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/cardview_dark_background"
-                android:clipToPadding="false" />
+                android:clipToPadding="false"
+                android:clipChildren="false"/>
 
             <TextView
                 android:id="@+id/loadingMore"
-                android:visibility="gone"
+                android:layout_below="@+id/recyclerview"
+                android:visibility="invisible"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="loading more"
                 android:textSize="20sp" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </FrameLayout>
 
